[package]
edition = "2021"
name    = "cellular_automata"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_vulkano    = { version = "0.12", features = ["gui"] }
bytemuck        = "1"
line_drawing    = "1"
strum           = "0.24"
strum_macros    = "0.24"
vulkano         = "0.33"
vulkano-shaders = "0.33"
vulkano-util    = "0.33"

[dependencies.bevy]
default-features = false
features         = []
version          = "0.10"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
